--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "start": "webpack --config webpack.config.js && vue-cli-service serve"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
-    "vue": "^2.5.16"
+    "jquery": "^3.3.1",
+    "rxjs": "^6.2.1",
+    "vue": "^2.5.16",
+    "vue-router": "^3.0.1",
+    "vue-rx": "^6.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
