--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
     "rxjs": "^6.2.1",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
